# cmdargs-generic

./: LICENSE  cmdargs-generic.cabal
examples/: Main.hs
src/: GenArgs.hs
