name:                cmdargs-generic
version:             0.1.0.0
synopsis:            experimental generic api for cmdargs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     GenArgs
  build-depends:       base >= 4.7 && < 5
                       , lens >= 4.12 && < 4.13
                       , containers >= 0.5
                       , cmdargs >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010


executable example
  Buildable: True
  hs-source-dirs:      examples
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                       , cmdargs-generic
  default-language:    Haskell2010
